--- a/index.html
+++ b/index.html
@@ -97,13 +97,23 @@
         <div id="content" class="ml">
 
             <nav class="navbar navbar-expand-lg navbar-light mb-1">
-                <div class="container-fluid">
+                <div class="container-fluid d-flex">
 
                     <button type="button" id="sidebarCollapse" class="btn text-sidebar bg-turbo-yellow">
                         <i class="fas fa-align-left"></i>
                         <span></span>
                     </button>
-                    <p class="main-heading m-0 p-0 me-auto">PORTFOLIO</p>
+                    <p class="main-heading m-0 p-0 me-auto portfolio ">PORTFOLIO</p>
+
+                    <div class="sidebar-header ms-auto lg-dec">
+                        <div class="dispaly-picture">
+                            <img src="assets/images/dp.jpg" alt="" class="img-fluid">
+                          </div>
+                          <div class="name-sec  me-3">
+                            <h1 class="name mb-0 pb-0">Mehwish Gul</h1>
+                            <h3 class="desc p-0 m-0">Web Designer</h3>
+                          </div>
+                    </div>
                 </div>
             </nav>
            
