--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <i class="fas fa-align-left"></i>
                         <span></span>
                     </button>
-                    <p class="main-heading m-0 p-0 me-auto portfolio ">PORTFOLIO</p>
+                    <p class="main-heading m-0 p-0 me-auto portfolio no-before">About Me</p>
                     <div class="header">
                         <div class="ms-auto lg-dec ">
                             <div class="dispaly-picture">
@@ -137,8 +137,35 @@
                     </div>
                 </div>
             </nav>
+            
+            <!-- about -->
+
+            <section class="about-section">
+                <div class="about">
+                    <div class="container-fluid h-100">
+                        <div class="row h-100">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-11 h-100 mx-auto  d-flex justify-content-center align-items-center">
+                                <div class="about-text">
+                                    <p class="main-heading m-0 p-0  ">Hello!</p>
+                                    <p class="text-white">
+                                        I am Mehwish,a multi disciplinary designer with 2 years Experience based out of the beautifull PAKISTAN city.I design beautiful and functonal Websites.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-5 col-md-5 col-sm-5">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <!-- gallery -->
+
+
+            <div class="text-center portfolio-heading mt-4">
+                Portfolio
+            </div>
             <div class="row">
 
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
