--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <h3 class="main-heading">
                     Contact
                 </h3>
-                <a href="tel:03013958138">
+                <!-- <a href="tel:03013958138">
                     <i class="fa-brands fa-whatsapp me-1"></i>
                     03013958138
-                </a><br>
+                </a><br> -->
                 <a href="" class="d-flex email mt-1">
                     <div class="me-1 f-16 nmt-1">@</div>
                     mehwishgul715@gmail.com
