--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                 <img src="assets/images/cirtrue.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Cirtrue</a>
+                                <a href="" class="mb-0 pb-0">Cirtru</a>
                             </div>
                         </div>
                     </a>
@@ -294,7 +294,7 @@
                                 <img src="assets/images/Vifro.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Vifro</a>
+                                <a href="" class="mb-0 pb-0">Vifiro</a>
                             </div>
                         </div>
                     </a>
@@ -319,7 +319,7 @@
                                 <img src="assets/images/virtruo.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Virtruo</a>
+                                <a href="" class="mb-0 pb-0">Virtuo Desk</a>
                             </div>
                         </div>
                     </a>
@@ -334,7 +334,7 @@
                                 <img src="assets/images/allhyips.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">AllHyiyps</a>
+                                <a href="" class="mb-0 pb-0">All HYIPS</a>
                             </div>
                         </div>
                     </a>
@@ -360,7 +360,7 @@
                                 <img src="assets/images/hotel.png" alt="" class="img-fluid h-100">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Hostel Theme</a>
+                                <a href="" class="mb-0 pb-0">Hotel Theme</a>
                             </div>
                         </div>
                     </a>
@@ -373,7 +373,7 @@
                                 <img src="assets/images/Natrious.png" alt="" class="img-fluid ">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Natrous</a>
+                                <a href="" class="mb-0 pb-0">Natours</a>
                             </div>
                         </div>
                     </a>
@@ -385,7 +385,7 @@
                                 <img src="assets/images/quant.png" alt="" class="img-fluid ">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Quantative</a>
+                                <a href="" class="mb-0 pb-0">Quantcreate</a>
                             </div>
                         </div>
                     </a>
