--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                 <img src="assets/images/Recuitor.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Recuitor</a>
+                                <a href="" class="mb-0 pb-0">Recuitor | Continue..</a>
                             </div>
                         </div>
                     </a>
@@ -270,7 +270,7 @@
                                 <img src="assets/images/sur.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Surfing</a>
+                                <a href="" class="mb-0 pb-0">Surfing | Continue</a>
                             </div>
                         </div>
                     </a>
@@ -294,7 +294,7 @@
                                 <img src="assets/images/Vifro.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Vifiro</a>
+                                <a href="" class="mb-0 pb-0">Vifiro | Continue</a>
                             </div>
                         </div>
                     </a>
