--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     Experience
                 </h3>
                 <ul>
-                    <li>2.5 Years</li>
+                    <li>3+ Years</li>
                 </ul>
             </div>
 
