--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
             </div>
 
             <div class="social-links mt-1">
+                
                 <div class="social-icon d-flex justify-content-center align-items-center">
-                    <a href="https://web.facebook.com/profile.php?id=100029839501221&_rdc=1&_rdr"><i
-                            class="fa-brands fa-facebook-f facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/mehwish-gul-a32259246/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <div class="social-icon d-flex justify-content-center align-items-center">
-                    <a href=""><i class="fa-brands fa-instagram instagram"></i></a>
+                    <a href="https://github.com/MishiMalik"><i class="fa-brands fa-github"></i></a>
                 </div>
+
                 <div class="social-icon">
                     <a href="https://www.fiverr.com/s2/a930233093">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 508.02 508.02">
@@ -407,12 +408,12 @@
 
             <div class="social-links mt-1">
                 <div class="social-icon d-flex justify-content-center align-items-center">
-                    <a href="https://web.facebook.com/profile.php?id=100029839501221&_rdc=1&_rdr"><i
-                            class="fa-brands fa-facebook-f facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/mehwish-gul-a32259246/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <div class="social-icon d-flex justify-content-center align-items-center">
-                    <a href=""><i class="fa-brands fa-instagram instagram"></i></a>
+                    <a href="https://github.com/MishiMalik"><i class="fa-brands fa-github"></i></a>
                 </div>
+
                 <div class="social-icon">
                     <a href="https://www.fiverr.com/s2/a930233093">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 508.02 508.02">
