--- a/index.html
+++ b/index.html
@@ -236,7 +236,32 @@
                         </div>
                     </a>
                 </div>
+                    
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://pixeeline.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/pixeeline.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="" class="mb-0 pb-0">Pixeeline</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://girlssociety.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/girlsBand.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="" class="mb-0 pb-0">Musician Girls</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 
 
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
