--- a/index.html
+++ b/index.html
@@ -179,14 +179,37 @@
                     <li class="text">SCSS</li>
                 </ul>
             </div>
+
             <!-- gallery -->
-
-
             <div class="text-center portfolio-heading mt-4">
                 Portfolio
             </div>
-            <div class="row">
 
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://balash.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/balash.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="" class="mb-0 pb-0">Balash</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://porfiles.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images//portfolio.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="" class="mb-0 pb-0">Photo Shoot</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://perfect-home.netlify.app/" target="_blank">
                         <div class="gallery-card">
@@ -223,7 +246,6 @@
                         </div>
                     </a>
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://zsales.netlify.app/" target="_blank">
                         <div class="gallery-card">
@@ -235,8 +257,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                    
+                </div>                   
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://pixeeline.netlify.app/" target="_blank">
                         <div class="gallery-card">
@@ -249,7 +270,6 @@
                         </div>
                     </a>
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://girlssociety.netlify.app/" target="_blank">
                         <div class="gallery-card">
@@ -262,8 +282,6 @@
                         </div>
                     </a>
                 </div>
-
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://recuitor.netlify.app/" target="_blank">
                         <div class="gallery-card">
@@ -336,7 +354,6 @@
                         </div>
                     </a>
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://virtuodesk.netlify.app/" target="_blank">
                         <div class="gallery-card">
@@ -349,9 +366,6 @@
                         </div>
                     </a>
                 </div>
-
-
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="http://allhyips.000webhostapp.com/" target="_blank">
                         <div class="gallery-card">
@@ -364,7 +378,6 @@
                         </div>
                     </a>
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://umw.netlify.app/studentsportal/" target="_blank">
                         <div class="gallery-card">
