--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                     <a href="https://balash.netlify.app/" target="_blank">
                         <div class="gallery-card">
                             <div class="gallery-card-img">
-                                <img src="assets/images/balash.png" alt="" class="img-fluid">
+                                <img src="assets/images/drill.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Balash</a>
+                                <a href="" class="mb-0 pb-0">Drill Talent</a>
                             </div>
                         </div>
                     </a>
