--- a/index.html
+++ b/index.html
@@ -190,13 +190,61 @@
 
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://dashboard138.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/dashboard-recway.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="https://dashboard138.netlify.app/" class="mb-0 pb-0">Dashboard Design</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://balash.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/balash.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="https://balash.netlify.app/" class="mb-0 pb-0">Balash</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://doors1234.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/door.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="https://doors1234.netlify.app/" class="mb-0 pb-0">Doors Bussiness</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://exploreart.netlify.app/index.html" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/exploreart.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="https://exploreart.netlify.app/index.html" class="mb-0 pb-0">Explore Art</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://traininglanding.netlify.app/" target="_blank">
                         <div class="gallery-card">
                             <div class="gallery-card-img">
                                 <img src="assets/images/drill.png" alt="" class="img-fluid">
                             </div>
                             <div class="gallery-card-text mt-3">
-                                <a href="" class="mb-0 pb-0">Drill Talent</a>
+                                <a href="https://traininglanding.netlify.app/" class="mb-0 pb-0">Drill Talent</a>
                             </div>
                         </div>
                     </a>
@@ -298,6 +346,18 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://chatbot5.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/glowing.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="https://chatbot5.netlify.app/" class="mb-0 pb-0">Glowing</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://cirtrue.netlify.app/" target="_blank">
                         <div class="gallery-card">
                             <div class="gallery-card-img">
@@ -305,6 +365,18 @@
                             </div>
                             <div class="gallery-card-text mt-3">
                                 <a href="" class="mb-0 pb-0">Cirtru</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://bernina-express.netlify.app/" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/bernina.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="" class="mb-0 pb-0">Bernina Express</a>
                             </div>
                         </div>
                     </a>
