--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <a href="https://github.com/MishiMalik"><i class="fa-brands fa-github"></i></a>
                 </div>
 
-                <div class="social-icon">
+                <!-- <div class="social-icon">
                     <a href="https://www.fiverr.com/s2/a930233093">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 508.02 508.02">
                             <defs>
@@ -109,7 +109,7 @@
                                 transform="translate(-1.83 -0.98)" />
                         </svg>
                     </a>
-                </div>
+                </div> -->
             </div>
 
         </nav>
