--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
             </div>
 
             <div class="row">
+              
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                     <a href="https://dashboard138.netlify.app/" target="_blank">
                         <div class="gallery-card">
@@ -233,6 +234,18 @@
                             </div>
                             <div class="gallery-card-text mt-3">
                                 <a href="https://exploreart.netlify.app/index.html" class="mb-0 pb-0">Explore Art</a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                    <a href="https://shopify750.netlify.app/index.html" target="_blank">
+                        <div class="gallery-card">
+                            <div class="gallery-card-img">
+                                <img src="assets/images/shopify (2).png" alt="" class="img-fluid">
+                            </div>
+                            <div class="gallery-card-text mt-3">
+                                <a href="https://shopify750.netlify.app/index.html" class="mb-0 pb-0">Shopify</a>
                             </div>
                         </div>
                     </a>
