--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                                             <p class="f-14 w-500 text-gray">&nbsp;Mehwish Gul</p>
                                         </div>
                                         <div class="d-flex align-items-center mt-2">
-                                            <p class="f-14 w-700">Age: </p>
-                                            <p class="f-14 w-500 text-gray">&nbsp;23</p>
+                                            <p class="f-14 w-700">Education: </p>
+                                            <p class="f-14 w-500 text-gray">&nbsp;BS Computer Science</p>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -125,7 +125,7 @@
                                     </div>
                                     <div class="col-lg-12 mt-3 mb-2">
                                         <div class="d-flex align-items-center ">
-                                            <a href="assets/images/Mehwish Gul-Web Designer.pdf"
+                                            <a href="assets/CV/Mehwish-CV-WebDeveloper.pdf"
                                                 class="fill-btn text-decoration-none">Download CV</a>
                                             <a href="#portfolio" class="blank-btn ms-4 text-decoration-none">My Work</a>
                                         </div>
