--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <ul class="ps-0 menu-side my-3">
                     <li><a href="#about" class=" menu-btn">About</a></li>
-                    <li><a href="#skills" class="menu-btn">Skilss</a></li>
+                    <li><a href="#skills" class="menu-btn">Skils</a></li>
                     <li><a href="#services" class="menu-btn">Services</a></li>
                     <li><a href="#portfolio" class="menu-btn">Portfolio</a></li>
                     <li><a href="#contact" class="menu-btn">Contact</a></li>
@@ -457,7 +457,7 @@
                                         </div>
                                     </div>
                                 </div>
-
+<!-- 
                                 <div class="grid-item smd" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://quantcreate.netlify.app/" target="_blank" class="grid-img">
                                         <img loading="lazy"
@@ -472,7 +472,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="grid-item smd" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://porfiles.netlify.app/" target="_blank" class="grid-img">
@@ -489,7 +489,7 @@
                                         </div>
                                     </div>
                                 </div>
-
+<!-- 
                                 <div class="grid-item smd db" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://recuitor.netlify.app/dashboard" target="_blank" class="grid-img">
                                         <img loading="lazy"
@@ -504,7 +504,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="grid-item db" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://recway-portal.netlify.app/" target="_blank" class="grid-img">
@@ -591,7 +591,7 @@
                                         </div>
                                     </div>
                                 </div>
-
+<!-- 
                                 <div class="grid-item smd" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://darkvariant.netlify.app/" target="_blank" class="grid-img">
                                         <img loading="lazy"
@@ -606,9 +606,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
-
-
+                                </div> -->
 
                                 <div class="grid-item smd" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://girlssociety.netlify.app/" target="_blank" class="grid-img">
@@ -626,7 +624,7 @@
                                     </div>
                                 </div>
 
-                                <div class="grid-item bussiness" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                <!-- <div class="grid-item bussiness" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://balash.netlify.app/" target="_blank" class="grid-img">
                                         <img loading="lazy"
                                             src="assets/images/bussiness/screencapture-balash-netlify-app-2023-07-04-09_38_36.jpg"
@@ -640,11 +638,9 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
-
-
-                                <div class="grid-item bussiness" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                <!-- <div class="grid-item bussiness" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://perfect-home.netlify.app/" target="_blank" class="grid-img">
                                         <img loading="lazy"
                                             src="assets/images/bussiness/screencapture-perfect-home-netlify-app-2023-07-04-11_03_29.png"
@@ -658,7 +654,8 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
+                           
                                 <div class="grid-item e-com" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                     <a href="https://reliance123.netlify.app/index.html" target="_blank"
                                         class="grid-img">
@@ -777,8 +774,7 @@
                         <div class="col-md-4 mb-md-0 mb-5">
                             <div class="d-flex flex-column justify-content-center align-items-center">
                                 <iconify-icon icon="ic:baseline-call" class="f-40 mb-3"></iconify-icon>
-                                <a href="tel:+923013958138" class="f-14 w-500 text-white text-decoration-none">+92 301
-                                    3958138</a>
+                                <a href="tel:+923013958138" class="f-14 w-500 text-white text-decoration-none">+92 326 1927300</a>
                                 <!-- <a href="https://api.whatsapp.com/send?phone=923013958138&text=Hi! Are you Availble for work?">Whatsapp Chat</a> -->
                             </div>
                         </div>
