--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                     <li><a href="#skills" class="menu-btn">Skils</a></li>
                     <li><a href="#services" class="menu-btn">Services</a></li>
                     <li><a href="#portfolio" class="menu-btn">Portfolio</a></li>
-                    <li><a href="#contact" class="menu-btn">Contact</a></li>
+                    <!-- <li><a href="#contact" class="menu-btn">Contact</a></li> -->
                 </ul>
                 <div>
                     <hr class="text-white">
                     <ul class="ps-0 menu-side">
-                        <li><a target="_blank"
+                        <!-- <li><a target="_blank"
                                 href="https://api.whatsapp.com/send?phone=923013958138&text=Hi! Are you Availble for work?">Hire
-                                Me <i class="bi bi-envelope-fill"></i></a></li>
+                                Me <i class="bi bi-envelope-fill"></i></a></li> -->
                     </ul>
                 </div>
             </div>
@@ -125,9 +125,9 @@
                                     </div>
                                     <div class="col-lg-12 mt-3 mb-2">
                                         <div class="d-flex align-items-center ">
-                                            <a href="assets/CV/MehwishGul-Resume.pdf" target="_blank"
-                                                class="fill-btn text-decoration-none">Download CV</a>
-                                            <a href="#portfolio" class="blank-btn ms-4 text-decoration-none">My Work</a>
+                                            <!-- <a href="assets/CV/MehwishGul-Resume.pdf" target="_blank"
+                                                class="fill-btn text-decoration-none">Download CV</a> -->
+                                            <a href="#portfolio" class="fill-btn  px-5 text-decoration-none">My Work</a>
                                         </div>
                                     </div>
                                 </div>
@@ -264,9 +264,9 @@
                                         projects. Hire me and get
                                         your project done.</p>
                                 </div>
-                                <div class="mt-xl-0 mt-4">
+                                <!-- <div class="mt-xl-0 mt-4">
                                     <a href="#contact" class="fill-btn  text-decoration-none">Hire Me</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -761,7 +761,7 @@
                 </div>
             </section>
 
-            <section class="footer pt-5 pb-4 px-lg-5" id="contact">
+            <!-- <section class="footer pt-5 pb-4 px-lg-5" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 mb-md-0 mb-5">
@@ -775,7 +775,6 @@
                             <div class="d-flex flex-column justify-content-center align-items-center">
                                 <iconify-icon icon="ic:baseline-call" class="f-40 mb-3"></iconify-icon>
                                 <a href="tel:+923261927300" class="f-14 w-500 text-white text-decoration-none">+92 326 1927300</a>
-                                <!-- <a href="https://api.whatsapp.com/send?phone=923013958138&text=Hi! Are you Availble for work?">Whatsapp Chat</a> -->
                             </div>
                         </div>
                         <div class="col-md-4 mb-md-0 mb-4">
@@ -802,7 +801,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
         </div>
 
