--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="assets/images/download (2).jpeg" alt="" class="img-fluid">
                     </div>
                     <h1 class="f-18 w-500 text-white text-center mt-3 mb-2">Mehwish Gul</h1>
-                    <p class="f-14 w-600 text-center text-gray ">Availble for work</p>
+                    <p class="f-14 w-600 text-center text-gray ">Web Developer</p>
 
                 </div>
                 <ul class="ps-0 menu-side my-3">
@@ -40,9 +40,10 @@
                 <div>
                     <hr class="text-white">
                     <ul class="ps-0 menu-side">
-                        <!-- <li><a target="_blank"
-                                href="https://api.whatsapp.com/send?phone=923013958138&text=Hi! Are you Availble for work?">Hire
-                                Me <i class="bi bi-envelope-fill"></i></a></li> -->
+                        <li><a target="_blank"
+                                href="">
+                                Availble for work
+                                <i class="bi bi-envelope-fill"></i></a></li>
                     </ul>
                 </div>
             </div>
