--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div>
                     <hr class="text-white">
                     <ul class="ps-0 menu-side">
-                        <li><a target="_blank"
+                        <li><a target="_blank" class="text-white"
                                 >
                                 Availble for work
                                </a>
