--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="d-flex align-items-center">
-                                            <p class="f-14 w-700">Email: </p>
+                                            <p class="f-14 w-700">Experience: </p>
                                             <p class="f-14 w-500 text-gray">&nbsp;<a
                                                     href="mailto:mehwishgul715@gmail.com"
-                                                    class="f-14 w-500 text-primary text-decoration-none">mehwishgul715@gmail.com</a>
+                                                    class="f-14 w-500 text-primary text-decoration-none">4+ Years</a>
                                             </p>
                                         </div>
                                         <div class="d-flex align-items-center mt-2">
